# distributed-halo2

./: .gitignore  .gitmodules  Cargo.toml  README.md
dist-primitives/: Cargo.toml
dist-primitives/examples/: dfft_test.rs  dmsm_bench.rs  dmsm_test.rs  dpp_test.rs  local_dfft_test.rs  local_dmsm_bench.rs  msm_bench.rs
dist-primitives/src/channel/: channel.rs
dist-primitives/src/dfft/: dfft.rs
dist-primitives/src/dmsm/: dmsm.rs
dist-primitives/src/dpp/: dpp.rs
dist-primitives/src/utils/: deg_red.rs  domain_util.rs  domain_utils.rs  g1_serialization.rs  mod.rs  pack.rs
dist-primitives/src/utils/bn256/: mod.rs  random_utils.rs
fib-circuit/: Cargo.toml
fib-circuit/src/: circuit.rs  lib.rs
halo2_gadgets/: Cargo.toml
halo2_proofs/: Cargo.toml
halo2_proofs/src/: poly.rs
mpc-net/src/: lib.rs
notes/: demo.md  port.md
plonk/: Cargo.toml
plonk/examples/: dpoly_commit_test.rs  local_plonk_test.rs  plonk_bench.rs
plonk/src/: dplonk.rs  dpoly_commit.rs  lib.rs  localplonk.rs  poly_commit.rs
scripts/: dfft_test.zsh  dmsm_bench.zsh  dmsm_test.zsh  dpoly_commit_test.zsh  dpp_test.zsh  ext_wit_test.zsh  local_dmsm_bench.zsh  plonk_bench.zsh
secret-sharing/: Cargo.toml
secret-sharing/src/: lib.rs  pss.rs
