[package]
name = "dist-primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = {version = "0.4.0", default-features = false, features = [ "print-trace", "std" ]}
# ark-ff = {version = "0.4.0", default-features = false}
# ark-poly = {version = "0.4.0", default-features = false}
ark-ec = {version = "0.4.0", default-features = false}
# ark-serialize = { version = "0.4.0", default-features = false, features = [ "derive" ] }

ark-bls12-377 = {version = "0.4.0", default-features = false, features = ["curve"] }

# Halo2 dependencies

serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.3"
ff = "0.13"
group = "0.13"
halo2curves = { version = "0.1.0" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }

secret-sharing = { version = "0.1.0", path = "../secret-sharing" }
mpc-net ={ version = "0.1.0", path = "../mpc-net" }

log = {version = "0.4"}
rand = { version = "0.8", default-features = false, features = ["std"] }
digest = { version = "0.10" }
sha2 = "0.10"
structopt = "0.3"
env_logger = "0.8"
