[package]
name = "plonk"
version = "0.1.0"
edition = "2021"

[dependencies]
# ARK Libraries
ark-std = {version = "0.4.0", default-features = false, features = [ "print-trace", "std" ]}

# Halo2 dependencies
serde = { version = "1.0", default-features = false, features = ["derive"] }
ff = "0.13"
halo2_proofs = { path = "../halo2_proofs"}

# PSS and MPC Libraries
secret-sharing = { version = "0.1.0", path = "../secret-sharing" }
mpc-net = { version = "0.1.0", path = "../mpc-net" }
dist-primitives = {version = "0.1.0", path = "../dist-primitives" }

# Other Libraries
log = {version = "0.4"}
rand = { version = "0.8", default-features = false, features = ["std"] }
digest = { version = "0.10" }
sha2 = "0.10"
structopt = "0.3"
env_logger = "0.8"