[package]
name = "secret-sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
ff = "0.13"
ark-std = {version = "0.4.0", default-features = false}

[dev-dependencies]
rand = "0.8"
